# preman

./: Cargo.toml  Makefile  README.md  preman.desktop
.github/workflows/: dev.yml  release.yml
src/: handlers.rs  main.rs  state.rs  steam.rs  ui.rs
src/app_types/: mod.rs  modal.rs  mode.rs  sort.rs
src/steam/: discovery.rs  mod.rs  vdf.rs
src/ui/: mod.rs  modals.rs  theme.rs  utils.rs
src/ui/components/: header_footer.rs  table.rs
