[package]
name = "preman"
version = "1.1.1"
edition = "2024"
description = "TUI tool to manage Steam Wine/Proton prefixes"

[[bin]]
name = "preman"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
dirs = "5"

[profile.release]
opt-level = 3
strip = true

[dev-dependencies]
tempfile = "3.12.0"
